--- a/mtcm/package.json
+++ b/mtcm/package.json
@@ -13,10 +13,13 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "framer-motion": "^12.23.0",
+    "highcharts": "^12.3.0",
+    "highcharts-react-official": "^3.2.2",
     "lucide-react": "^0.525.0",
     "react": "^19.1.0",
     "react-chartjs-2": "^5.3.0",
     "react-dom": "^19.1.0",
+    "react-gauge-component": "^1.2.64",
     "react-router-dom": "^7.6.3",
     "react-scripts": "5.0.1",
     "recharts": "^3.0.2",
