--- a/mtcm/package.json
+++ b/mtcm/package.json
@@ -16,6 +16,7 @@
     "highcharts": "^12.3.0",
     "highcharts-react-official": "^3.2.2",
     "lucide-react": "^0.525.0",
+    "plotly.js-dist": "^3.0.1",
     "react": "^19.1.0",
     "react-chartjs-2": "^5.3.0",
     "react-dom": "^19.1.0",
